#4261: compiles, but lots of todos